Adicionar menu lateral

--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -6,8 +6,10 @@ $primary: #73614c;
 $secondary: #FFDBCD;
 $text: #504f51;
 $gray: #616162;
+$gray-strong: #484749;
+$gray-smoke: #CFCFCF;
 $yellow: #E9BE3E;
 $dark-strong: rgba(0, 0, 0, 0.87);
-$light: #EEEEEE;
+$light: rgba(255, 255, 255, 0.9);
 $white: #fff;
 $black: #000;
