--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -2,11 +2,24 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: $font-family-primary;
 }
 
-html, body {
-    height: 100%;
+html {
+    @include media(md) {
+        font-size: 87.5%;
+    }
+
+    @include media(lg) {
+        font-size: 93.75%;
+    }
+}
+
+body {
+    -webkit-font-smoothing: antialiased;
+}
+
+body, input, textarea, button {
+    font-family: $font-family-primary;
 }
 
 img {
@@ -27,7 +40,12 @@ a {
     text-decoration: none;
 }
 
-.app {
+ul {
+    padding: 0;
+    list-style: none;
+}
+
+#app {
     min-height: 100vh;
     display: flex;
 }
