--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,6 @@
 @import './utils/breakpoints';
 @import './utils/variables';
+@import './utils/mixins';
 @import 'global';
 @import './components/dashboard';
 @import './components/menu';
