--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -4,10 +4,13 @@ $font-family-primary: 'Lato', sans-serif;
 //Colors
 $primary: #73614c;
 $secondary: #FFDBCD;
+$secondary-aux: #DBB0A0;
 $text: #504f51;
 $gray: #616162;
 $gray-strong: #484749;
+$gray-ultra-strong: #212121;
 $gray-smoke: #CFCFCF;
+$gray-lighter: #FCFCFC;
 $yellow: #E9BE3E;
 $dark-strong: rgba(0, 0, 0, 0.87);
 $light: rgba(255, 255, 255, 0.9);
