--- a/styles/components/_menu.scss
+++ b/styles/components/_menu.scss
@@ -6,11 +6,21 @@
     flex-direction: column;
     transform: translateX(-100%);
     transition: transform 0.4s ease-in-out;
-    position: relative;
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    right: 90%;
+    bottom: 0;
 
     @include media(sm) {
         max-width: 360px;
+    }
+    
+    @include media(xl) {
         transform: initial;
+        position: relative;
+
     }
 
     &.menu--mobile {
@@ -228,15 +238,19 @@
     &__open {
         display: inline-block;
         position: absolute;
-        right: -30px;
+        right: -23px;
         z-index: 1;
-        width: 2rem;
-        height: 3rem;
+        width: 1.5rem;
+        height: 2.5rem;
         background-color: $text;
         border: 0;
         cursor: pointer;
 
         @include media(sm) {
+            right: -21px;
+        }
+
+        @include media(xl) {
             display: none;
         }
 
