Adicionar modal de cookies

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,3 +4,5 @@
 @import 'global';
 @import './components/dashboard';
 @import './components/menu';
+@import './components/cookies';
+@import './components/modal';
