--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -1,17 +1,22 @@
 //Fonts
 $font-family-primary: 'Lato', sans-serif;
+$font-family-secondary: 'Source Sans Pro', sans-serif;
 
 //Colors
 $primary: #73614c;
+$primary-aux: #BF8756;
 $secondary: #FFDBCD;
 $secondary-aux: #DBB0A0;
 $text: #504f51;
 $gray: #616162;
+$gray-medium: #4D565E;
 $gray-strong: #484749;
 $gray-ultra-strong: #212121;
 $gray-smoke: #CFCFCF;
 $gray-lighter: #FCFCFC;
 $yellow: #E9BE3E;
+$blue: #51608C;
+$red: #D60020;
 $dark-strong: rgba(0, 0, 0, 0.87);
 $light: rgba(255, 255, 255, 0.9);
 $white: #fff;
