--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -56,3 +56,11 @@ ul {
     display: flex;
 }
 
+.container {
+    max-width: 70rem;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    padding: 0 1rem;
+}
+
