--- a/styles/components/_menu.scss
+++ b/styles/components/_menu.scss
@@ -7,7 +7,7 @@
     transform: translateX(-100%);
     transition: transform 0.4s ease-in-out;
     position: fixed;
-    z-index: 2;
+    z-index: 4;
     top: 0;
     left: 0;
     right: 90%;
@@ -16,11 +16,14 @@
     @include media(sm) {
         max-width: 360px;
     }
+
+    @include media(lg) {
+        z-index: 2; 
+    }
     
     @include media(xl) {
         transform: initial;
         position: relative;
-
     }
 
     &.menu--mobile {
