--- a/styles/components/_dashboard.scss
+++ b/styles/components/_dashboard.scss
@@ -457,28 +457,35 @@
     }
 
     &__table {
-        padding-top: 1rem;
+        padding-top: 3.5rem;
+        padding-bottom: 2rem;
         overflow-x: auto;
 
         table {
             width: 100%;
-            border-spacing: 1.675rem;
+            border: 0;
+            border-spacing: 0;
             
             th {
                 text-align: left;
                 font-size: 1.125rem;
                 color: $black;
                 letter-spacing: 0.5px;
+                padding: 0.875rem;
             }
             
             td {
                 font-size: 1rem;
                 color: $text;
+                padding: 0.875rem;
+                padding-left: 0.875rem;
             }
 
             tbody {
                 tr {
-                    padding: 1rem 0;
+                    &:hover {
+                        background-color: $gray-smoke;
+                    }
                 }
             }
         }
